Fix Bug 1444616 - fix context menu button alignment

--- a/system-addon/content-src/components/CollapsibleSection/_CollapsibleSection.scss
+++ b/system-addon/content-src/components/CollapsibleSection/_CollapsibleSection.scss
@@ -27,7 +27,7 @@
       border: 0;
       cursor: pointer;
       fill: $grey-50;
-      height: $context-menu-button-size;
+      height: $section-context-menu-button-height;
       offset-inline-end: 0;
       opacity: 0;
       position: absolute;
