--- a/system-addon/content-src/styles/_variables.scss
+++ b/system-addon/content-src/styles/_variables.scss
@@ -107,6 +107,7 @@ $context-menu-font-size: 14px;
 $context-menu-border-radius: 5px;
 $context-menu-outer-padding: 5px;
 $context-menu-item-padding: 3px 12px;
+$section-context-menu-button-height: 20px;
 
 $error-fallback-font-size: 12px;
 $error-fallback-line-height: 1.5;
